<resources>
    <string name="app_name">Login</string>
    <string name="login_image">LandingImage</string>
    <string name="guesture_icon">Productlogi</string>
    <string name="login_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam erat sapien, ultricies.</string>
    <string name="next_btn">next_btn</string>
    <string name="loginhead">Login</string>
    <string name="hintText">Email or Mobile Number</string>
    <string name="password">Password</string>
    <string name="dontHavaAccount">Don’t have an account yet?</string>
    <string name="getOneNow">Get one now.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot password?</string>


</resources>
