<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".login_Creadential">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="256dp"
        android:background="@color/logoBackground"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="134dp"
            android:layout_height="118dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/login_image"
            android:src="@drawable/ic_products_logo" />

        <TextView
            android:layout_width="231dp"
            android:layout_height="67dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/login_text"
            android:textColor="@color/login_text_color"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="414dp"
        android:layout_height="262dp"
        android:layout_marginTop="260dp"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="66dp"
            android:layout_height="24dp"
            android:text="@string/loginhead"
            android:textColor="@color/login_text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:elevation="9dp"
            android:hint="@string/hintText"
            android:inputType="text"
            android:padding="16dp" />

        <EditText
            android:id="@+id/password_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/border"
            android:drawableEnd="@drawable/ic_eye_blue_background"
            android:elevation="9dp"
            android:hint="@string/password"
            android:inputType="text"
            android:padding="16dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="293dp"
        android:layout_marginBottom="193dp"
        android:text="@string/forgot_password"
        android:textColor="@color/turquoise"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:background="@drawable/borderbottom"/>

    <Button
        android:id="@+id/button"
        android:layout_width="107dp"
        android:layout_height="35dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="162dp"
        android:background="@drawable/nextbutton"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="71dp"
        android:text="@string/dontHavaAccount"
        android:textColor="@color/loginheadcolor"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/borderbottom"
        android:text="@string/getOneNow"
        android:textColor="@color/turquoise"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>


