<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.carmel.guesture.LoginLanding">

    <ImageView
        android:id="@+id/landingImage"
        android:layout_width="wrap_content"
        android:layout_height="850dp"
        android:contentDescription="@string/login_image"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46"
        app:srcCompat="@drawable/login_carsousel" />

    <ImageView
        android:id="@+id/productlogo"
        android:layout_width="413dp"
        android:layout_height="80dp"
        android:layout_marginTop="42dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/guesture_icon"
        android:cropToPadding="false"
        android:paddingLeft="112dp"
        android:paddingTop="42dp"
        android:paddingRight="112dp"
        android:paddingBottom="42dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/landingImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landingImage"
        app:layout_constraintVertical_bias="0.002"
        app:srcCompat="@drawable/ic_products_logo"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/productDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:text="@string/login_text"
        android:textAlignment="center"
        android:textColor="@color/login_text_color"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productlogo" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/nextbutton"
        android:contentDescription="@string/next_btn"
        android:maxWidth="68dp"
        android:maxHeight="34dp"
        android:minWidth="68dp"
        android:minHeight="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productDesc"
        app:srcCompat="@drawable/ic_keyboard_next_white" />
</androidx.constraintlayout.widget.ConstraintLayout>